test/errors/break_outside_loop.correct
error: break_outside_loop.li:1:1: 'break' used outside of a loop
│ break;
│ ~~~~~
│ ^
